# sqlite-wasm

./: .gitignore  .gitmodules  Makefile  composition.wac
host/: Cargo.toml  README.md  SPI.md
host/src/: lib.rs  main.rs  policy.rs
host/tests/: load.rs
src/bindings-ext/: sqlite_world.h
src/bindings-unified/: sqlite_cli_unified.c  sqlite_cli_unified.h
src/cli/: sqlite_cli.c
wit/: extension-loader-host.wit  extension-loader.wit
